# decentra-todo

./: .gitignore  Cargo.toml  README.md  README_社区验证功能.md  check_balances.js  check_methods.js  package-lock.json  package.json  set_balances.js  setup_achievements.js  test_achievements.js  test_community_verification.js  test_community_verification_complete.js  test_notification_system.js  test_search_functionality.js  test_search_manual.js  test_verification_simple.js  test_voting.js  transfer_funds.js  项目运行摘要.md
docs/: NFT成就系统优化总结.md  NFT成就系统文档.md  代码优化总结.md  奖励机制使用指南.md  数据统计功能实现总结.md  数据统计看板使用指南.md  社区验证功能实现总结.md  社区验证功能演示.md  通知系统实现总结.md  高级搜索功能使用指南.md  高级搜索功能测试报告.md
frontend/: package-lock.json  package.json  test-search-components.html  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx  types.ts
frontend/src/components/: CommunityVerificationModal.tsx  Navbar.tsx  NotificationCenter.tsx  QuickSearch.tsx  ReputationCard.tsx  SearchResults.tsx  StatisticsCharts.tsx  TaskEvaluationModal.tsx  TaskSearchForm.tsx
frontend/src/components/__tests__/: QuickSearch.test.tsx  TaskSearchForm.test.tsx
frontend/src/hooks/: useApi.tsx
frontend/src/pages/: CreateTask.tsx  Dashboard.tsx  TaskDetail.tsx  TaskList.tsx
pallets/achievements/: Cargo.toml
pallets/achievements/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs
pallets/notifications/: Cargo.toml
pallets/notifications/src/: lib.rs
pallets/reputation/: Cargo.toml
pallets/reputation/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs
pallets/tasks/: Cargo.toml
pallets/tasks/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs
runtime/: Cargo.toml
runtime/src/: apis.rs  genesis_config_presets.rs  lib.rs
runtime/src/configs/: mod.rs
