[package]
name = "pallet-achievements"
description = "NFT成就系统 - 基于任务完成和声誉里程碑自动铸造成就NFT"
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-support.workspace = true
frame-system.workspace = true
pallet-nfts.workspace = true
scale-info = { features = ["derive"], workspace = true }
sp-runtime.workspace = true
sp-std.workspace = true

[dev-dependencies]
pallet-balances = { version = "41.1.0" }
sp-core = { version = "36.1.0" }
sp-io = { version = "40.0.1" }
sp-runtime = { version = "41.1.0" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-nfts/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-nfts/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]

try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-nfts/try-runtime",
	"sp-runtime/try-runtime",
] 