[package]
name = "pallet-reputation"
version = "0.1.0"
description = "A pallet for managing user reputation based on task completion quality"
authors = ["DecentraTodo Team"]
license = "Unlicense"
repository = "https://github.com/decentra-todo/decentra-todo"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.11.1", default-features = false, features = ["derive"] }

# Substrate
frame-benchmarking = { version = "40.0.0", default-features = false, optional = true }
frame-support = { version = "40.1.0", default-features = false }
frame-system = { version = "40.1.0", default-features = false }
sp-runtime = { version = "41.1.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-core = { version = "36.1.0", default-features = false }
sp-io = { version = "40.0.1", default-features = false }
pallet-timestamp = { version = "39.0.0", default-features = false }

# Local dependencies
pallet-tasks = { version = "0.1.0", default-features = false, path = "../tasks" }

[dev-dependencies]
serde = { version = "1.0.210" }

# Substrate
pallet-balances = { version = "41.1.0" }
pallet-timestamp = { version = "39.0.0" }
sp-core = { version = "36.1.0" }
sp-io = { version = "40.0.1" }
sp-runtime = { version = "41.1.0" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-tasks/std",
	"pallet-timestamp/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-core/std",
	"sp-io/std",
	"pallet-timestamp/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-tasks/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-tasks/try-runtime",
	"pallet-timestamp/try-runtime",
	"sp-runtime/try-runtime",
	"pallet-timestamp/try-runtime",
] 