[package]
name = "pallet-tasks"
version = "0.1.0"
authors = ["DecentraTodo Team"]
description = "Task management pallet for DecentraTodo blockchain"
edition = "2021"
license = "MIT-0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { version = "3.7.4", default-features = false, package = "parity-scale-codec", features = ["derive"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
frame-benchmarking = { version = "40.0.0", default-features = false, optional = true }
frame-support = { version = "40.1.0", default-features = false }
frame-system = { version = "40.1.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-runtime = { version = "41.1.0", default-features = false }
sp-core = { version = "36.1.0", default-features = false }
sp-io = { version = "40.0.1", default-features = false }

[dev-dependencies]
pallet-balances = { version = "41.1.0" }
sp-core = { version = "36.1.0" }
sp-io = { version = "40.0.1" }
sp-runtime = { version = "41.1.0" }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-benchmarking?/std",
    "frame-support/std", 
    "frame-system/std",
    "sp-std/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-io/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
] 